<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:id="@+id/layTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white_FFFFFF">
        <LinearLayout 
            android:id="@+id/layBack"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/img_back"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginLeft="5dp"
            	android:textColor="@color/red_FF3300"/>
        </LinearLayout>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp"
            android:textColor="@color/red_FF3300"
            android:layout_centerInParent="true"/>
        <Button 
            android:id="@+id/btnPhone"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/red_phone"/>
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/layInputAccount"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/layTitle"
        android:background="@color/white_FFFFFF">
        <ImageView 
            android:id="@+id/imgPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/telphone"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>
        <EditText 
            android:id="@+id/editAccount"
            android:layout_marginLeft="10dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/inputPhoneNum"
            android:layout_toRightOf="@+id/imgPhone"
        	android:background="@color/app_no_color"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:textSize="13sp"/>
    </RelativeLayout>
    <View 
        android:id="@+id/lingView"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/line_color"
        android:layout_below="@+id/layInputAccount"/>
    <RelativeLayout 
        android:id="@+id/layInputPassword"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/lingView"
        android:background="@color/white_FFFFFF">
        <ImageView 
            android:id="@+id/imgPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_key"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>
        <EditText 
            android:id="@+id/editPassword"
            android:inputType="textPassword"
            android:layout_marginLeft="10dp"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:hint="@string/inputPassword"
            android:layout_toRightOf="@+id/imgPassword"
        	android:background="@color/app_no_color"
            android:layout_centerVertical="true"
            android:textSize="13sp"
            android:layout_toLeftOf="@+id/textForgetPassword"/>
        <TextView 
            android:id="@+id/textForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginForgetPassword"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>
    <Button 
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/loginAccount"
        android:background="@layout/btn_red"
        android:layout_margin="60dp"
        android:textColor="@color/white_FFFFFF"
        android:layout_below="@+id/layInputPassword"/>
    <LinearLayout 
        android:id="@+id/layRegister"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerNow"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
        	android:textColor="@color/red_FF3300"/>
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/img_forward"/>
    </LinearLayout>
</RelativeLayout>