<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:id="@+id/layTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white_FFFFFF">
        <LinearLayout 
            android:id="@+id/layBack"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/img_back"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginLeft="5dp"
            	android:textColor="@color/red_FF3300"/>
        </LinearLayout>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myAccount"
            android:textSize="15sp"
            android:textColor="@color/red_FF3300"
            android:layout_centerInParent="true"/>
        <Button 
            android:id="@+id/btnPhone"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/red_phone"/>
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/layAuctionAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/white_FFFFFF">
        <ImageView 
            android:id="@+id/iconAuctonAccount"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/auction_account"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/red_FF3300"
            android:text="@string/auctionAccount"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/iconAuctonAccount"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneyIcon"
            android:layout_centerVertical="true"
            android:textColor="@color/red_FF3300"
            android:layout_toLeftOf="@+id/textAuctonBalance"/>
        <TextView 
            android:id="@+id/textAuctonBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textColor="@color/red_FF3300"/>
    </RelativeLayout>
	<RelativeLayout 
        android:id="@+id/layPayAccount"
        android:layout_marginTop="7dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_FFFFFF">
        <ImageView 
            android:id="@+id/iconPayAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/account_pay"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/red_FF3300"
            android:text="@string/payAccount"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/iconPayAccount"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneyIcon"
            android:layout_centerVertical="true"
            android:textColor="@color/red_FF3300"
            android:layout_toLeftOf="@+id/textPayBalance"/>
        <TextView
            android:id="@+id/textPayBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textColor="@color/red_FF3300"/>
    </RelativeLayout>
</LinearLayout>